@@ -1,5 +1,12 @@
 2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Dialog_Partition_Resize_Move.cc,
+	  src/GParted_Core.cc,
+	  src/Win_GParted.cc,
+	  src/hfs.cc: added support for shrinking hfs filesystems 
+
+2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/DialogManageFlags.cc: disabled resizing of this dialog
 	* include/DialogFeatures.h,
 	  include/Makefile.am,
